--- a/DataWrangling.ipynb
+++ b/DataWrangling.ipynb
@@ -1,6 +1,420 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ac651454-3fcf-4a1c-b79d-e3c9c16e72df",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This is a test to begin\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "301defb0-c0b8-4eea-b44d-0af1a83c1f15",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "This notebook is for Data Wrangling and Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "627a5892-c1fd-4d0a-8e8a-bfe5bc3ce9b0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95c912bc-4f12-44ae-b15a-8325e6e4a9f1",
+   "metadata": {},
+   "source": [
+    "This is the main dataset that contains information for each Food Environment Atlas category."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8a28961e-10fe-4a35-a54f-66941c68e669",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FIPS</th>\n",
+       "      <th>State</th>\n",
+       "      <th>County</th>\n",
+       "      <th>Variable_Code</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>LACCESS_POP10</td>\n",
+       "      <td>18428.439690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>LACCESS_POP15</td>\n",
+       "      <td>17496.693040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>PCH_LACCESS_POP_10_15</td>\n",
+       "      <td>-5.056026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>PCT_LACCESS_POP10</td>\n",
+       "      <td>33.769657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>PCT_LACCESS_POP15</td>\n",
+       "      <td>32.062255</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FIPS State   County          Variable_Code         Value\n",
+       "0  1001    AL  Autauga          LACCESS_POP10  18428.439690\n",
+       "1  1001    AL  Autauga          LACCESS_POP15  17496.693040\n",
+       "2  1001    AL  Autauga  PCH_LACCESS_POP_10_15     -5.056026\n",
+       "3  1001    AL  Autauga      PCT_LACCESS_POP10     33.769657\n",
+       "4  1001    AL  Autauga      PCT_LACCESS_POP15     32.062255"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Importing Dataset\n",
+    "file_food_atlas = 'StateAndCountyData.csv'\n",
+    "data_state_county = pd.read_csv(file_food_atlas)\n",
+    "data_state_county.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "46c3d756-1007-498a-939e-8fd82544df72",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FIPS               int64\n",
+       "State             object\n",
+       "County            object\n",
+       "Variable_Code     object\n",
+       "Value            float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_state_county.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "915fafc0-97f1-4f53-8a54-adf64caee8a3",
+   "metadata": {},
+   "source": [
+    "Importing State Dataset -- This dataset contains supplemental information at the state level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a2348e80-09be-4a21-80ad-97d75d849473",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State_FIPS</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Variable_Code</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>WIC_PART_2012</td>\n",
+       "      <td>141899.8333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>WIC_PART_2013</td>\n",
+       "      <td>139000.5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>WIC_PART_2014</td>\n",
+       "      <td>131046.2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>WIC_PART_2015</td>\n",
+       "      <td>132132.7500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>WIC_PART_2016</td>\n",
+       "      <td>129159.9167</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   State_FIPS State  Variable_Code        Value\n",
+       "0           1    AL  WIC_PART_2012  141899.8333\n",
+       "1           1    AL  WIC_PART_2013  139000.5000\n",
+       "2           1    AL  WIC_PART_2014  131046.2500\n",
+       "3           1    AL  WIC_PART_2015  132132.7500\n",
+       "4           1    AL  WIC_PART_2016  129159.9167"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Importing State Dataset\n",
+    "file_state_data = 'SupplementalDataState.csv'\n",
+    "data_state = pd.read_csv(file_state_data)\n",
+    "data_state.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57a1a3dc-23f2-4230-9214-fa2ec0fecdfe",
+   "metadata": {},
+   "source": [
+    "Importing County Dataset -- This dataset contains supplemental information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d459e9f6-0013-4002-a977-fba67f18d3d7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FIPS</th>\n",
+       "      <th>State</th>\n",
+       "      <th>County</th>\n",
+       "      <th>Variable_Code</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>2010_Census_Population</td>\n",
+       "      <td>54571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>Population_Estimate_2011</td>\n",
+       "      <td>55208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>Population_Estimate_2012</td>\n",
+       "      <td>54936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>Population_Estimate_2013</td>\n",
+       "      <td>54713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>Population_Estimate_2014</td>\n",
+       "      <td>54876</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FIPS State          County             Variable_Code  Value\n",
+       "0  1001    AL  Autauga County    2010_Census_Population  54571\n",
+       "1  1001    AL  Autauga County  Population_Estimate_2011  55208\n",
+       "2  1001    AL  Autauga County  Population_Estimate_2012  54936\n",
+       "3  1001    AL  Autauga County  Population_Estimate_2013  54713\n",
+       "4  1001    AL  Autauga County  Population_Estimate_2014  54876"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Importing County Dataset\n",
+    "file_county_data = 'SupplementalDataCounty.csv'\n",
+    "data_county = pd.read_csv(file_county_data)\n",
+    "data_county.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5741e0e8-a79d-401d-aa0a-8038a9c10204",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
