Removing rows with null values

--- a/DataWrangling.ipynb
+++ b/DataWrangling.ipynb
@@ -3128,6 +3128,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 904,
+   "id": "4b3e2536-3381-4154-a1bd-9c854232540b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "119     60\n",
+       "121     60\n",
+       "123     60\n",
+       "125     60\n",
+       "127     60\n",
+       "        ..\n",
+       "3130    60\n",
+       "3132    60\n",
+       "3134    60\n",
+       "3136    60\n",
+       "3138    60\n",
+       "Length: 136, dtype: int64"
+      ]
+     },
+     "execution_count": 904,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row_nan_count_method = pivot_df.isnull().sum(axis=1)\n",
+    "#row_nan_count_method.sort_values(ascending=False)\n",
+    "row_nan_count_method[row_nan_count_method > 30]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 913,
+   "id": "63e22aa3-5312-4787-8e59-fefb61c0e16e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Variable_Code</th>\n",
+       "      <th>FIPS</th>\n",
+       "      <th>State</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>AL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>AL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>1005</td>\n",
+       "      <td>AL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>1007</td>\n",
+       "      <td>AL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>1009</td>\n",
+       "      <td>AL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3323</th>\n",
+       "      <td>56037</td>\n",
+       "      <td>WY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3324</th>\n",
+       "      <td>56039</td>\n",
+       "      <td>WY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3325</th>\n",
+       "      <td>56041</td>\n",
+       "      <td>WY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3326</th>\n",
+       "      <td>56043</td>\n",
+       "      <td>WY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3327</th>\n",
+       "      <td>56045</td>\n",
+       "      <td>WY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3277 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Variable_Code   FIPS State\n",
+       "51              1001    AL\n",
+       "52              1003    AL\n",
+       "53              1005    AL\n",
+       "54              1007    AL\n",
+       "55              1009    AL\n",
+       "...              ...   ...\n",
+       "3323           56037    WY\n",
+       "3324           56039    WY\n",
+       "3325           56041    WY\n",
+       "3326           56043    WY\n",
+       "3327           56045    WY\n",
+       "\n",
+       "[3277 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 913,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pivot_df[['FIPS', 'State']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 886,
    "id": "ce7c9a76-0373-4a38-a016-ba10fdaa1155",
    "metadata": {
