Finished changing data types

--- a/DataWrangling2.ipynb
+++ b/DataWrangling2.ipynb
@@ -3802,7 +3802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 105,
    "id": "3e6feea3-6018-43ff-bdfa-d96e163bcb36",
    "metadata": {
     "tags": []
@@ -3811,22 +3811,71 @@
    "source": [
     "counties_LA = int(4678215/64)\n",
     "\n",
-    "pivot_df[pivot_df['State']=='LA']['County'].fillna(counties_LA)"
+    "pivot_df = pivot_df.fillna(counties_LA)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "80592383-a207-4e22-a5c9-d32db83a8188",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Variable_Code\n",
+       "FIPS                        0\n",
+       "State                       0\n",
+       "County                      0\n",
+       "CACFP_PART_2016             0\n",
+       "CONVS16                     0\n",
+       "CONVSPTH16                  0\n",
+       "FFR16                       0\n",
+       "FFRPTH16                    0\n",
+       "FSR16                       0\n",
+       "FSRPTH16                    0\n",
+       "GROC16                      0\n",
+       "GROCPTH16                   0\n",
+       "NSLP_PART_2016              0\n",
+       "PCT_WICINFANTCHILD16        0\n",
+       "PCT_WICWOMEN16              0\n",
+       "Population_Estimate_2016    0\n",
+       "RECFAC16                    0\n",
+       "RECFACPTH16                 0\n",
+       "REDEMP_WICS16               0\n",
+       "SBP_PART_2016               0\n",
+       "SFSP_PART_2016              0\n",
+       "SNAP_BBCE16                 0\n",
+       "SNAP_CAP16                  0\n",
+       "SNAP_OAPP16                 0\n",
+       "SNAP_PART_RATE16            0\n",
+       "SNAP_REPORTSIMPLE16         0\n",
+       "SPECS16                     0\n",
+       "SPECSPTH16                  0\n",
+       "SUPERC16                    0\n",
+       "SUPERCPTH16                 0\n",
+       "State_Population_2016       0\n",
+       "WICS16                      0\n",
+       "WICSPTH16                   0\n",
+       "WIC_PART_2016               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pivot_df.isna().sum()"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "ea687ed3-ae00-43f6-aca7-cd4abf4ecdc2",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3835,7 +3884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 107,
    "id": "ca8542e6-4aa3-4fdf-8e82-34b4e8f9fa1b",
    "metadata": {
     "tags": []
@@ -3860,7 +3909,6 @@
        "NSLP_PART_2016              float64\n",
        "PCT_WICINFANTCHILD16        float64\n",
        "PCT_WICWOMEN16              float64\n",
-       "PC_WIC_REDEMP16             float64\n",
        "Population_Estimate_2016    float64\n",
        "RECFAC16                    float64\n",
        "RECFACPTH16                 float64\n",
@@ -3876,14 +3924,14 @@
        "SPECSPTH16                  float64\n",
        "SUPERC16                    float64\n",
        "SUPERCPTH16                 float64\n",
-       "State_Population_2016       float64\n",
+       "State_Population_2016         int64\n",
        "WICS16                      float64\n",
        "WICSPTH16                   float64\n",
        "WIC_PART_2016               float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3903,7 +3951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 108,
    "id": "1101f495-8f81-4dbd-9d02-27a43713d5ce",
    "metadata": {
     "tags": []
@@ -3914,12 +3962,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a9a13d5-eb55-4246-9e6a-cd36d33c85a0",
+   "metadata": {},
+   "source": [
+    "#### Population_Estimate_2016\n",
+    "This should not be a float variable for the same reason as State_Population_2016. People are counted in whole numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "306f5903-2d51-42ef-815e-d88838986a69",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "pivot_df['Population_Estimate_2016'] = pivot_df['Population_Estimate_2016'].astype('int')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8847e9ed-61ed-4520-88ad-e7e85ef938f4",
+   "metadata": {},
+   "source": [
+    "#### Grocery and Convenience stores\n",
+    "The columns listed below are all counts of physical locations, so they cannot be floats. They must be integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "3ecbb684-b705-4cdc-9f8a-2a1f7afa7607",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "pivot_df['GROC16'] = pivot_df['GROC16'].astype('int') # Count of grocery stores\n",
+    "pivot_df['CONVS16'] = pivot_df['CONVS16'].astype('int') # Count of convenience stores\n",
+    "pivot_df['RECFAC16'] = pivot_df['RECFAC16'].astype('int') # Count of recreation & fitness facilities\n",
+    "pivot_df['SPECS16'] = pivot_df['SPECS16'].astype('int') # Count of specialized food stores\n",
+    "pivot_df['SUPERC16'] = pivot_df['SUPERC16'].astype('int') # Count of supercenters & club stores\n",
+    "pivot_df['FFR16'] = pivot_df['FFR16'].astype('int') # Count of fast-food restaurants\n",
+    "pivot_df['FSR16'] = pivot_df['FSR16'].astype('int') # Count of full-service restaurants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "8eadd550-dc85-46cb-b477-b2e978e80049",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Variable_Code\n",
+       "FIPS                          int64\n",
+       "State                        object\n",
+       "County                       object\n",
+       "CACFP_PART_2016             float64\n",
+       "CONVS16                       int64\n",
+       "CONVSPTH16                  float64\n",
+       "FFR16                         int64\n",
+       "FFRPTH16                    float64\n",
+       "FSR16                         int64\n",
+       "FSRPTH16                    float64\n",
+       "GROC16                        int64\n",
+       "GROCPTH16                   float64\n",
+       "NSLP_PART_2016              float64\n",
+       "PCT_WICINFANTCHILD16        float64\n",
+       "PCT_WICWOMEN16              float64\n",
+       "Population_Estimate_2016      int64\n",
+       "RECFAC16                      int64\n",
+       "RECFACPTH16                 float64\n",
+       "REDEMP_WICS16               float64\n",
+       "SBP_PART_2016               float64\n",
+       "SFSP_PART_2016              float64\n",
+       "SNAP_BBCE16                 float64\n",
+       "SNAP_CAP16                  float64\n",
+       "SNAP_OAPP16                 float64\n",
+       "SNAP_PART_RATE16            float64\n",
+       "SNAP_REPORTSIMPLE16         float64\n",
+       "SPECS16                       int64\n",
+       "SPECSPTH16                  float64\n",
+       "SUPERC16                      int64\n",
+       "SUPERCPTH16                 float64\n",
+       "State_Population_2016         int64\n",
+       "WICS16                      float64\n",
+       "WICSPTH16                   float64\n",
+       "WIC_PART_2016               float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pivot_df.dtypes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fd4ade2-3d29-4599-ab57-7a2b613ef3da",
+   "id": "ef55a0b2-8828-4aee-8d6b-8d854612ec22",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pivot_df['RECFACPTH16'] = pivot_df['RECFACPTH16'].astype('int') # Count of recreation & fitness facilities per 1,000 pop\n",
+    "pivot_df['CONVSPTH16'] = pivot_df['CONVSPTH16'].astype('int') # Count of convenience stores per 1,000 pop\n",
+    "pivot_df['FFRPTH16'] = pivot_df['FFRPTH16'].astype('int') # Count of fast-food restaurants per 1,000 pop\n",
+    "pivot_df['FSRPTH16'] = pivot_df['FSRPTH16'].astype('int') # Count of full-service restaurants per 1,000 pop\n",
+    "pivot_df['GROCPTH16'] = pivot_df['GROCPTH16'].astype('int') # Count of grocery stores per 1,000 pop\n",
+    "pivot_df['SPECSPTH16'] = pivot_df['SPECSPTH16'].astype('int') # Count of specialized food stores per 1,000 pop\n",
+    "pivot_df['SUPERCPTH16'] = pivot_df['SUPERCPTH16'].astype('int') # Count of specialized food stores per 1,000 pop"
+   ]
   }
  ],
  "metadata": {
