--- a/DataWrangling2.ipynb
+++ b/DataWrangling2.ipynb
@@ -12,7 +12,6 @@
    "cell_type": "markdown",
    "id": "fba29348-6a5a-465f-a8a1-0ee7db6acd2e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -46,7 +45,6 @@
    "cell_type": "markdown",
    "id": "69ec3e6b-523c-42ba-8f26-5f5046c90f0f",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3886,7 +3884,10 @@
    "id": "9bf5ca42-c2f4-4d61-ac4c-95895143efa5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "income_file = 'StateAndCountyData.csv'\n",
+    "data_state_county = pd.read_csv(file_food_atlas)"
+   ]
   }
  ],
  "metadata": {
