--- a/DataWrangling2.ipynb
+++ b/DataWrangling2.ipynb
@@ -3872,6 +3872,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e772321a-bca8-4430-bb24-d9d8035c43ce",
+   "metadata": {},
+   "source": [
+    "#### Next Steps\n",
+    "pivot_df contains information regarding food stores, restaurants, nutrition programs, and basic population data. The next step in my data wrangling and cleaning process is to add more demographic data from 2016. I will do this using census data: https://data.census.gov/table/ACSST1Y2016.S1701?q=2016%20demographic&t=Income%20and%20Poverty&g=010XX00US"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b9d054f2-18bf-4bc3-943a-a4e32871f99a",
    "metadata": {},
    "source": [
@@ -3900,6 +3909,14 @@
    "source": [
     "income_file = 'Income.csv'\n",
     "income = pd.read_csv(income_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba3c6620-c5d5-4e13-988d-83d267834ecc",
+   "metadata": {},
+   "source": [
+    "income contains income data by state by household status. I might include this later if I need to add more demographic data."
    ]
   },
   {
@@ -4801,7 +4818,6 @@
    "cell_type": "markdown",
    "id": "1dc252bd-13b1-4195-9446-060f8b063b0e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -4825,11 +4841,13 @@
    "cell_type": "markdown",
    "id": "1fd456e4-4644-402a-8ec2-99de1bc54614",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "#### Exploring data"
+    "#### Exploring data\n",
+    "demo contains demographic data by state, including information regarding age, employment status, educational attainment, etc.\n",
+    "\n",
+    "I will organize the data to eventually merge with pivot_df."
    ]
   },
   {
@@ -5149,7 +5167,8 @@
     "tags": []
    },
    "source": [
-    "#### Organizing data"
+    "#### Organizing data\n",
+    "I am going to drop columns for the United States overall as well as Puerto Rico. My data from pivot_df does not contain United States country data or data for Puerto Rico, so I want to drop these columns."
    ]
   },
   {
@@ -5176,6 +5195,14 @@
    "source": [
     "cols_to_drop2 = demo.columns[demo.columns.str.contains('Puerto')]\n",
     "demo.drop(cols_to_drop2, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf07ce23-2faf-414a-ba6c-dceee0804e9e",
+   "metadata": {},
+   "source": [
+    "I am going to drop all columns pertaining to the margin of error. I will also need to drop the \"BelowPoverty\" columns because I want to keep demographic data for the entire population of each state. My goal is to eventually transpose the data to mirror pivot_df. To do so, I need one column for each state in the demo dataframe. I want to keep the \"TotalEstimate\" for each state to get an understanding of the demographics for each state."
    ]
   },
   {
@@ -7088,6 +7115,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e432a79-a0de-4409-9d66-1df8c8d80fa2",
+   "metadata": {},
+   "source": [
+    "I am going to drop the columns that contain no data. These columns were titles in the initial dataset, but they are not contributing to my current dataframe. I will add them into a list called \"drop_cols\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 490,
    "id": "00cdb7f0-3710-4a69-8b6d-a6f9e5f15edc",
@@ -7315,6 +7350,49 @@
    ],
    "source": [
     "demo_total.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 503,
+   "id": "6bb429f4-ba8c-4b5f-a31f-11b62998a5b7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "State\n",
+       "State                                                           object\n",
+       "Population_for_whom_poverty_status_is_determined                object\n",
+       "Under_18_years                                                  object\n",
+       "Under_5_years                                                   object\n",
+       "5_to_17_years                                                   object\n",
+       "                                                                 ...  \n",
+       "75_years_and_over                                               object\n",
+       "Mean_income_deficit_for_unrelated_individuals_(dollars)         object\n",
+       "Worked_full-time,_year-round_in_the_past_12_months              object\n",
+       "Worked_less_than_full-time,_year-round_in_the_past_12_months    object\n",
+       "Did_not_work                                                    object\n",
+       "Length: 61, dtype: object"
+      ]
+     },
+     "execution_count": 503,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demo_total.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f1c2b1c-d0db-4539-a7c9-37ead14c9bea",
+   "metadata": {},
+   "source": [
+    "It looks like all of the variables for demo_total are objects. I think they should be changed to integers or floats."
    ]
   },
   {
