Creating csv file for clean data

--- a/DataWrangling2.ipynb
+++ b/DataWrangling2.ipynb
@@ -9127,7 +9127,9 @@
    "id": "c8b85591-f87e-46e6-b8da-07619b9757e7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_full.to_csv('clean_combined.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
