--- a/DataWrangling2.ipynb
+++ b/DataWrangling2.ipynb
@@ -607,7 +607,6 @@
    "cell_type": "markdown",
    "id": "f8c62940-a3b5-40d6-982b-cbb76a6b24cd",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -968,7 +967,6 @@
    "cell_type": "markdown",
    "id": "e1641575-0c92-4707-b47f-568a1b0e1f09",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -9122,10 +9120,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8b85591-f87e-46e6-b8da-07619b9757e7",
+   "cell_type": "markdown",
+   "id": "68acef5f-00fe-4678-bd1e-b4f034ba30f3",
    "metadata": {},
+   "source": [
+    "## Save data as csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 475,
+   "id": "c8b85591-f87e-46e6-b8da-07619b9757e7",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "df_full.to_csv('clean_combined.csv', index=False)"
