Changed data types

--- a/DataWrangling2B.ipynb
+++ b/DataWrangling2B.ipynb
@@ -970,7 +970,6 @@
    "cell_type": "markdown",
    "id": "e1641575-0c92-4707-b47f-568a1b0e1f09",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1728,7 +1727,6 @@
    "cell_type": "markdown",
    "id": "3b730788-5738-4e72-aa09-a6ec6517d450",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3599,7 +3597,6 @@
    "cell_type": "markdown",
    "id": "ea687ed3-ae00-43f6-aca7-cd4abf4ecdc2",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3824,8 +3821,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "700930ee-b8d9-4b46-913d-a70e63eac089",
+   "metadata": {},
+   "source": [
+    "SNAP_BBCE16 (SNAP Broad-based Categorical Eligibility, 2016) is a classification variable, so I need to change it to a categorical variable."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 238,
+   "id": "00a0f3ca-e8ae-4039-be0c-430514c513d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pivot_df['SNAP_BBCE16'] = pivot_df['SNAP_BBCE16'].astype('category') # Count of supercenter food & club stores per 1,000 pop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
    "id": "edb2fe36-c979-4a0d-8a84-e55001e741b9",
    "metadata": {
     "tags": []
@@ -3835,44 +3850,33 @@
      "data": {
       "text/plain": [
        "Variable_Code\n",
-       "FIPS                          int64\n",
-       "State                        object\n",
-       "County                       object\n",
-       "CACFP_PART_2016             float64\n",
-       "CONVS16                       int64\n",
-       "CONVSPTH16                    int64\n",
-       "FFR16                         int64\n",
-       "FFRPTH16                      int64\n",
-       "FSR16                         int64\n",
-       "FSRPTH16                      int64\n",
-       "GROC16                        int64\n",
-       "GROCPTH16                     int64\n",
-       "NSLP_PART_2016              float64\n",
-       "PCT_WICINFANTCHILD16        float64\n",
-       "PCT_WICWOMEN16              float64\n",
-       "RECFAC16                      int64\n",
-       "RECFACPTH16                   int64\n",
-       "REDEMP_WICS16               float64\n",
-       "SBP_PART_2016               float64\n",
-       "SFSP_PART_2016              float64\n",
-       "SNAP_BBCE16                 float64\n",
-       "SNAP_CAP16                  float64\n",
-       "SNAP_OAPP16                 float64\n",
-       "SNAP_PART_RATE16            float64\n",
-       "SNAP_REPORTSIMPLE16         float64\n",
-       "SPECS16                       int64\n",
-       "SPECSPTH16                    int64\n",
-       "SUPERC16                      int64\n",
-       "SUPERCPTH16                   int64\n",
-       "State_Population_2016         int64\n",
-       "WICS16                      float64\n",
-       "WICSPTH16                   float64\n",
-       "WIC_PART_2016               float64\n",
-       "Population_Estimate_2016      int64\n",
+       "FIPS                           int64\n",
+       "State                         object\n",
+       "County                        object\n",
+       "CACFP_PART_2016              float64\n",
+       "CONVS16                        int64\n",
+       "FFR16                          int64\n",
+       "FSR16                          int64\n",
+       "GROC16                         int64\n",
+       "NSLP_PART_2016               float64\n",
+       "PCT_WICINFANTCHILD16         float64\n",
+       "PCT_WICWOMEN16               float64\n",
+       "RECFAC16                       int64\n",
+       "REDEMP_WICS16                float64\n",
+       "SBP_PART_2016                float64\n",
+       "SFSP_PART_2016               float64\n",
+       "SNAP_BBCE16                 category\n",
+       "SNAP_PART_RATE16             float64\n",
+       "SPECS16                        int64\n",
+       "SUPERC16                       int64\n",
+       "State_Population_2016          int64\n",
+       "WICS16                       float64\n",
+       "WIC_PART_2016                float64\n",
+       "Population_Estimate_2016       int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4429,6 +4433,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "72d55a92-41b2-45e2-8bdd-b3b6418ba75c",
+   "metadata": {},
+   "source": [
+    "I only want to keep SNAP_PART_RATE16, which is the percent of eligible population that participate in SNAP."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "59ef346b-80d7-44fe-90a0-6da698b68a29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_snap = ['SNAP_CAP16', 'SNAP_OAPP16']\n",
+    "pivot_df = pivot_df.drop(drop_snap,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e772321a-bca8-4430-bb24-d9d8035c43ce",
    "metadata": {},
    "source": [
@@ -4439,7 +4462,9 @@
   {
    "cell_type": "markdown",
    "id": "5cbc03f0-31eb-4332-b8c6-9ac5c0bcb8d0",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Poverty data"
    ]
@@ -6725,7 +6750,9 @@
   {
    "cell_type": "markdown",
    "id": "b9d054f2-18bf-4bc3-943a-a4e32871f99a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Demographic data"
    ]
@@ -14871,14 +14898,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 234,
    "id": "c8b85591-f87e-46e6-b8da-07619b9757e7",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df_full.to_csv('clean_combined.csv', index=False)"
+    "df_full.to_csv('new_clean_combined.csv', index=False)"
    ]
   }
  ],
