--- a/EDA2.ipynb
+++ b/EDA2.ipynb
@@ -5,7 +5,8 @@
    "id": "76fe0925-3d9b-41bc-89dd-45316a18f691",
    "metadata": {},
    "source": [
-    "# Food Desert Investigation -- Exploratory Data Analysis"
+    "# Food Desert Investigation -- Exploratory Data Analysis\n",
+    "Hypothesis: Access to grocery stores, specialty food stores, and recreation centers are measures populations with higher education and employment outcomes."
    ]
   },
   {
